--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -20,11 +20,11 @@ jobs:
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B B-YEP-400-LYN-4-1-indiestudio-lucas.guichard/cross_platform/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+      run: cd cross_platform && cmake https://github.com/EpitechIT2020/B-YEP-400-LYN-4-1-indiestudio-lucas.guichard/tree/develop/cross_platform
 
     - name: Build
       # Build your program with the given configuration
-      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+      run: cd cross_platform && cmake --build https://github.com/EpitechIT2020/B-YEP-400-LYN-4-1-indiestudio-lucas.guichard/tree/develop/cross_platform/build
 
     - name: Test
       working-directory: ${{ github.workspace }}/build
