Added Irrlitch cmake implementation in CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,10 +6,18 @@ PROJECT(bomberman VERSION 1.0)
 # Set g++ standard version
 SET(CMAKE_CXX_STANDARD 17)
 
+# Set modules
+#SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/modules")
+#SET(Irrlicht_DIR "${CMAKE_SOURCE_DIR}/modules/Irrlicht/")
+#SET(SFMLAudio_DIR "${CMAKE_SOURCE_DIR}/modules/SFMLAudio/")
+
 # Add cmake modules folder to cmake path
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 # Set this to the minimal version you want to support
 FIND_PACKAGE(raylib 3.7) # Let CMake search for a raylib-config.cmake
+FIND_PACKAGE(Irrlicht REQUIRED)
+#INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/include")
+#INCLUDE_DIRECTORIES(${Irrlicht_INCLUDE_DIRS})
 
 # Generate a list of files
 FILE(GLOB_RECURSE BOMBERMAN_SRCS CONFIGURE_DEPENDS
@@ -33,6 +41,7 @@ SET(LIB_HEADERS_PATH "${CMAKE_CURRENT_SOURCE_DIR}/Lib/")
 ADD_EXECUTABLE(${PROJECT_NAME} ${BOMBERMAN_SRCS} ${HEADERS_FILES})
 # This part downloads raylib and builds it if it's not installed on your system
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} raylib) # Specify libraries or flags to use when linking a given target and/or its dependents
+TARGET_LINK_LIBRARIES(${PROJECT_NAME} Irrlicht) # Specify libraries or flags to use when linking a given target and/or its dependents
 
 # Specify include directories to use when compiling a given target
 # PRIVATE keyword ensure a complete compilation beetwin dependencies
