--- a/Lib/XRaylib/CMakeLists.txt
+++ b/Lib/XRaylib/CMakeLists.txt
@@ -15,18 +15,15 @@ FILE(GLOB XRAY_SRCS CONFIGURE_DEPENDS
     "${PROJECT_SOURCE_DIR}/XRay/*.cpp"
     "${PROJECT_SOURCE_DIR}/XRay/*.hpp"
     "${PROJECT_SOURCE_DIR}/XRay/*.inl"
-    "${PROJECT_SOURCE_DIR}/../interfaces/*.hpp"
+    "${PROJECT_SOURCE_DIR}/../../Engine/Interfaces/*.hpp"
 )
 
 add_subdirectory(Raylib)
 
 # Set Headers paths
 SET(RAYLIB_HEADERS_PATH "${CMAKE_CURRENT_SOURCE_DIR}/Raylib/")
-SET(INTERFACES_HEADERS_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../interfaces/")
-
-#set(CMAKE_SHARED_LINKER_FLAGS "-Wl,--export-all-symbols")
-
-set(BUILD_SHARED_LIBS ON)
+SET(INTERFACES_HEADERS_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../Engine/Interfaces/")
+SET(ENGINE_HEADERS_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../Engine/Interfaces/")
 # Create our library target
 add_library(${PROJECT_NAME} STATIC ${XRAY_SRCS})
 
@@ -35,15 +32,5 @@ TARGET_LINK_LIBRARIES(${PROJECT_NAME} raylib-cpp)
 TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE
     ${RAYLIB_HEADERS_PATH}
     ${INTERFACES_HEADERS_PATH}
+    ${ENGINE_HEADERS_PATH}
 )
-
-#Let's set compiler-specific flags
-#if (${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU") # G++
-#    set(CMAKE_CXX_FLAGS "-fPIC")
-#    target_compile_options(${PROJECT_NAME} PUBLIC -Wall -Wextra -fPIC -shared)
-#
-#elseif(${CMAKE_CXX_COMPILER_ID} STREQUAL "MSVC") # MSVC
-#    target_compile_options(${PROJECT_NAME} PUBLIC /EHsc /MTd /W2 /c)
-#    # Set the DLLEXPORT variable to export symbols
-#    target_compile_definitions(${PROJECT_NAME} PUBLIC WIN_EXPORT)
-#endif()
