Added clean project (deleted Irrlicht implementation, for now)

--- a/Lib/XRaylib/Raylib/CMakeLists.txt
+++ b/Lib/XRaylib/Raylib/CMakeLists.txt
@@ -1,12 +1,13 @@
 # CMakeLists.txt
 
 # Always set the cmake min version.
-cmake_minimum_required(VERSION 3.17)
+CMAKE_MINIMUM_REQUIRED(VERSION 3.17)
 
-set (PROJECT_VERSION "1.0")
+# TODO: doc
+SET(PROJECT_VERSION "1.0")
 
 # Set the variable PROJ_NAME to whatever your library's name is, PROJECT_VERSION should be a version string like "0.1"
-project(raylib-cpp VERSION ${PROJECT_VERSION})
+PROJECT(raylibCPP VERSION ${PROJECT_VERSION})
 
 # Set g++ standard version
 SET(CMAKE_CXX_STANDARD 17)
@@ -16,20 +17,22 @@ LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 # Set this to the minimal version you want to support
 FIND_PACKAGE(raylib 3.7) # Let CMake search for a raylib-config.cmake
 
-FILE(GLOB_RECURSE LIB_SRCS CONFIGURE_DEPENDS
+# TODO: doc
+FILE(GLOB_RECURSE RAYLIB_SRCS CONFIGURE_DEPENDS
     "${PROJECT_SOURCE_DIR}/*.cpp"
-    "${PROJECT_SOURCE_DIR}/*.hpp"
     "${PROJECT_SOURCE_DIR}/*.inl"
 )
 
 # Set Headers paths
 SET(RAYLIB_HEADERS_PATH "${CMAKE_CURRENT_SOURCE_DIR}/")
 
-# Create our library target
-add_library(${PROJECT_NAME} STATIC ${LIB_SRCS})
+# Create our static library target
+ADD_LIBRARY(${PROJECT_NAME} STATIC ${RAYLIB_SRCS})
 
+# TODO: doc
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} raylib)
 
+# TODO: doc
 TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE
     ${RAYLIB_HEADERS_PATH}
 )
