--- a/.github/workflows/windows-cmake.yml
+++ b/.github/workflows/windows-cmake.yml
@@ -1,4 +1,9 @@
-name: Linux CMake
+# Windows cmake action
+# upon push and pull request on the develop branch
+# it will ltry to launch the cmake project in a suitable run environment
+# runs two instances on both windows 19 and windows 16
+
+name: Windows CMake
 
 on:
   push:
@@ -28,10 +33,10 @@ jobs:
 
     - name: Build
       # Build your program with the given configuration
-      run: cmake --build ${{ github.workspace }}/build --config ${{env.BUILD_TYPE}}
+      run: cmake --build ${{ github.workspace }}/cross_platform/build --config ${{env.BUILD_TYPE}}
 
     - name: Test
-      working-directory: ${{ github.workspace }}/build
+      working-directory: ${{ github.workspace }}/cross_platform/build
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest -C ${{env.BUILD_TYPE}}
