Add comments on all CMakeLists.txt we use.

--- a/Lib/XRaylib/CMakeLists.txt
+++ b/Lib/XRaylib/CMakeLists.txt
@@ -1,9 +1,11 @@
-# CMakeLists.txt
+# This CMakeLists.txt meta-compile our XRay lib
+# that bring raylib-cpp improvement to our interface
+# Export : libXRay.a
 
 # Always set the cmake min version.
 CMAKE_MINIMUM_REQUIRED(VERSION 3.17)
 
-# TODO: doc
+# Set the project version 1.0 for example
 SET(PROJECT_VERSION "1.0")
 
 # Set the variable PROJ_NAME to whatever your library's name is, PROJECT_VERSION should be a version string like "0.1"
@@ -12,13 +14,14 @@ PROJECT(xray VERSION ${PROJECT_VERSION})
 # Set g++ standard version
 SET(CMAKE_CXX_STANDARD 17)
 
-# TODO: doc
+# Find globaly and recursively all source files required to compile the project
 FILE(GLOB XRAY_SRCS CONFIGURE_DEPENDS
     "${PROJECT_SOURCE_DIR}/XRay/*.cpp"
     "${PROJECT_SOURCE_DIR}/XRay/*.inl"
 )
 
-# TODO: doc
+# Make Raylib CMakeList meta-compile raylib-cpp library
+# It will be linked with our XRay library project
 ADD_SUBDIRECTORY(Raylib)
 
 # Set Headers paths
@@ -28,10 +31,10 @@ SET(ENGINE_HEADERS_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../Engine/")
 # Create our static library target
 ADD_LIBRARY(${PROJECT_NAME} STATIC ${XRAY_SRCS})
 
-# TODO: doc
+# Link raylib-cpp library to our raylib-cpp project
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} raylibCPP)
 
-# TODO: doc
+# Add headers path to our project
 TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE
     ${RAYLIB_HEADERS_PATH}
     ${ENGINE_HEADERS_PATH}
