--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,9 @@ PROJECT(bomberman VERSION 1.0)
 # Set g++ standard version
 SET(CMAKE_CXX_STANDARD 17)
 
-# TODO: doc
+# Make XRay CMakeList meta-compile XRay library that himself
+# will make Raylib-cpp meta compile
+# It will be linked with our Bomberman project
 ADD_SUBDIRECTORY(Lib/XRaylib)
 
 # Generate a list of files
