--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,24 +3,10 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.17) # FetchContent is available in 3.17+
 # Set the project name and version
 PROJECT(bomberman VERSION 1.0)
 
-INCLUDE(FetchContent)
-FetchContent_Declare(
-  ressources
-  URL https://github.com/Jose-JohnEm/indie-studio-ressources/raw/master/ressources.zip
-)
-
-SET(FETCHCONTENT_QUIET NO)
-FetchContent_GetProperties(ressources)
-if (NOT ressources_POPULATED)
-    FetchContent_Populate(ressources)
-endif ()
-
-file(RENAME ${ressources_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/r-test)
-
-#FetchContent_MakeAvailable(ressources SUBBUILD_DIR ${CMAKE_CURRENT_SOURCE_DIR}/r-test)
-
 # Set g++ standard version
 SET(CMAKE_CXX_STANDARD 17)
+
+include(cmake/fetchressources.cmake)
 
 # Make XRay CMakeList meta-compile XRay library that himself
 # will make Raylib-cpp meta compile
