Add comments to explain the new version of the fetchressource module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ PROJECT(bomberman VERSION 1.0)
 # Set g++ standard version
 SET(CMAKE_CXX_STANDARD 17)
 
+# Call the fetch_ressources module
 include(cmake/fetchressources.cmake)
 
 # Make XRay CMakeList meta-compile XRay library that himself
