--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,8 @@ PROJECT(bomberman VERSION 1.0)
 # Set g++ standard version
 SET(CMAKE_CXX_STANDARD 17)
 
-# Call the fetch_ressources module
-include(cmake/fetchressources.cmake)
+# Call the Fetchresources module
+INCLUDE(cmake/Findresources.cmake)
 
 # Make XRay CMakeList meta-compile XRay library that himself
 # will make Raylib-cpp meta compile
