Cleaned -g3 compile flag

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,7 @@ TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE
     ${RAYLIB_HEADERS_PATH}
 )
 
-TARGET_COMPILE_OPTIONS(bomberman PRIVATE -g3)
+# Active in debug environment or hidden in release
+#TARGET_COMPILE_OPTIONS(bomberman PRIVATE -g3)
 
 # That's it! You should have an bomberman executable that you can run. Have fun!
