--- a/Lib/XRaylib/CMakeLists.txt
+++ b/Lib/XRaylib/CMakeLists.txt
@@ -39,4 +39,5 @@ TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE
     ${XRAY_HEADERS_PATH}
 )
 
-TARGET_COMPILE_OPTIONS(xray PRIVATE -g3)
+# Active in debug environment or hidden in release
+#TARGET_COMPILE_OPTIONS(xray PRIVATE -g3)
