--- a/Lib/XRaylib/Raylib/CMakeLists.txt
+++ b/Lib/XRaylib/Raylib/CMakeLists.txt
@@ -37,4 +37,5 @@ TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE
     ${RAYLIB_HEADERS_PATH}
 )
 
-TARGET_COMPILE_OPTIONS(raylibCPP PRIVATE -g3)
+# Active in debug environment or hidden in release
+#TARGET_COMPILE_OPTIONS(raylibCPP PRIVATE -g3)
