--- a/.github/workflows/windows-cmake.yml
+++ b/.github/workflows/windows-cmake.yml
@@ -37,7 +37,8 @@ jobs:
 
     - name: Test
       working-directory: ${{ github.workspace }}/cross_platform/build
-      # Execute tests defined by the CMake configuration.  
+      # Execute tests defined by the CMake configuration.
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest -C ${{env.BUILD_TYPE}}
-      
+
+# TODO: update path (not cross_platform/ folder)
