Added github actions on push action for master and develop branches

--- a/.github/workflows/linux-cmake.yml
+++ b/.github/workflows/linux-cmake.yml
@@ -7,7 +7,7 @@ name: Linux CMake
 
 on:
   push:
-    branches: [ develop ]
+    branches: [ master, develop ]
   pull_request:
     branches: [ develop ]
 
