Can now display a 3D model on player choice menu

--- a/Lib/XRaylib/CMakeLists.txt
+++ b/Lib/XRaylib/CMakeLists.txt
@@ -40,4 +40,4 @@ TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE
 )
 
 # Active in debug environment or hidden in release
-TARGET_COMPILE_OPTIONS(xray PRIVATE -g3 -lstdc++fs)
+#TARGET_COMPILE_OPTIONS(xray PRIVATE -g3 -lstdc++fs)
