Re-organise architecture to add PlayerSelector better

--- a/Lib/XRaylib/CMakeLists.txt
+++ b/Lib/XRaylib/CMakeLists.txt
@@ -13,7 +13,7 @@ PROJECT(xray VERSION ${PROJECT_VERSION})
 SET(CMAKE_CXX_STANDARD 17)
 
 # Find globaly and recursively all source files required to compile the project
-FILE(GLOB XRAY_SRCS CONFIGURE_DEPENDS
+FILE(GLOB_RECURSE XRAY_SRCS CONFIGURE_DEPENDS
     "${PROJECT_SOURCE_DIR}/XRay/sources/*.cpp"
 )
 
