Edited GithubActions for unit tests

--- a/.github/workflows/g-test.yml
+++ b/.github/workflows/g-test.yml
@@ -2,9 +2,9 @@ name: gtest actions
 
 on:
   push:
-    branches: [ features ]
+    branches: [ features/tests ]
   pull_request:
-    branches: [ features ]
+    branches: [ features/tests ]
 
 jobs:
   build:
