Edited (again) the Github Action Muted some tests in CMakeLists for unit tests

--- a/.github/workflows/g-test.yml
+++ b/.github/workflows/g-test.yml
@@ -2,9 +2,9 @@ name: gtest actions
 
 on:
   push:
-    branches: [ features/tests ]
+    branches: [ master, develop ]
   pull_request:
-    branches: [ features/tests ]
+    branches: [ master, develop ]
 
 jobs:
   build:
