--- a/.github/workflows/g-test.yml
+++ b/.github/workflows/g-test.yml
@@ -19,10 +19,10 @@ jobs:
       run: mkdir build && cd build && cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_FLAGS="-Werror" ..
 
     - name: make
-      run: cd build && make
+      run: cmake --build ${{ github.workspace }}/Tests/build --config ${{env.BUILD_TYPE}}
 
     - name: Test
-      working-directory: ${{ github.workspace }}/Tests
+      working-directory: ${{ github.workspace }}/Tests/build
       # Execute tests defined by the CMake configuration.
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest -C ${{env.BUILD_TYPE}}
