--- a/.github/workflows/g-test.yml
+++ b/.github/workflows/g-test.yml
@@ -19,7 +19,7 @@ jobs:
       run: sudo apt-get install libgtest-dev && sudo apt-get install xorg-dev libglu1-mesa-dev && sudo apt-get install libirrlicht1.8 libirrlicht-dev libirrlicht-doc && cmake -E env SKIP_RESOURCES_FETCHING="TRUE" cmake -B ${{ github.workspace}}/Tests/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
     - name: make
-      run: cmake --build ${{ github.workspace }}/Tests/build --config ${{env.BUILD_TYPE}}
+      run: cmake --build ${{ github.workspace }}/Tests/build ##--config ${{env.BUILD_TYPE}}
 
     - name: Test
       working-directory: ${{ github.workspace }}/Tests/build
