--- a/.github/workflows/g-test.yml
+++ b/.github/workflows/g-test.yml
@@ -21,18 +21,9 @@ jobs:
     - name: make
       run: cmake --build ${{ github.workspace }}/Tests/build ##--config ${{env.BUILD_TYPE}}
 
-    - name: Test Game
-      working-directory: ${{ github.workspace }}/Tests/build/sources/Game
+    - name: Test
+      working-directory: ${{ github.workspace }}/Tests/sources/Game
       # Execute tests defined by the CMake configuration.
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest -C ${{env.BUILD_TYPE}}
-    - name: Test Raylib
-      working-directory: ${{ github.workspace }}/Tests/build/sources/Raylib
-      # Execute tests defined by the CMake configuration.
-      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ctest -C ${{env.BUILD_TYPE}}
-    - name: Test Xray
-      working-directory: ${{ github.workspace }}/Tests/build/sources/Xray
-      # Execute tests defined by the CMake configuration.
-      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ctest -C ${{env.BUILD_TYPE}}
+    
