--- a/.github/workflows/g-test.yml
+++ b/.github/workflows/g-test.yml
@@ -21,8 +21,8 @@ jobs:
     - name: make
       run: cmake --build ${{ github.workspace }}/Tests/build ##--config ${{env.BUILD_TYPE}}
 
-    - name: Test
-      working-directory: ${{ github.workspace }}/Tests/sources/Game
+    - name: Test Game
+      working-directory: ${{ github.workspace }}/Tests/sources/Game.test
       # Execute tests defined by the CMake configuration.
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest -C ${{env.BUILD_TYPE}}
