--- a/.github/workflows/g-test.yml
+++ b/.github/workflows/g-test.yml
@@ -25,5 +25,5 @@ jobs:
       working-directory: ${{ github.workspace }}/Tests/sources/Game.test
       # Execute tests defined by the CMake configuration.
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ctest -R cpp
+      run: ./test_bomberman
     
