--- a/.github/workflows/g-test.yml
+++ b/.github/workflows/g-test.yml
@@ -22,7 +22,7 @@ jobs:
       run: cmake --build ${{ github.workspace }}/Tests/build ##--config ${{env.BUILD_TYPE}}
 
     - name: Test Game
-      working-directory: ${{ github.workspace }}/Tests/sources/Game.test
+      working-directory: ${{ github.workspace }}/Tests/build
       # Execute tests defined by the CMake configuration.
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ./test_bomberman
