--- a/.github/workflows/g-test.yml
+++ b/.github/workflows/g-test.yml
@@ -15,12 +15,12 @@ jobs:
 
     - uses: actions/checkout@v2
 
-    - name: configure
+    - name: configure CMake
       run: sudo apt-get install libgtest-dev && sudo apt-get install xorg-dev libglu1-mesa-dev && sudo apt-get install libirrlicht1.8 libirrlicht-dev libirrlicht-doc && cmake -E env SKIP_RESOURCES_FETCHING="TRUE" cmake -B ${{ github.workspace}}/Tests/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
     - name: make
-      working-directory: ${{ github.workspace }}/Tests/build
-      run: cmake --build . && ./test_bomberman ##--config ${{env.BUILD_TYPE}}
+      working-directory: ${{ github.workspace }}/Tests
+      run: cd build && cmake --build . ##--config ${{env.BUILD_TYPE}}
 
     - name: Test Game
       working-directory: ${{ github.workspace }}/Tests/build
