--- a/.github/workflows/g-test.yml
+++ b/.github/workflows/g-test.yml
@@ -21,9 +21,10 @@ jobs:
     - name: make
       run: cmake --build ${{ github.workspace }}/Tests/build ##--config ${{env.BUILD_TYPE}}
 
-    - name: Test Game
-      working-directory: ${{ github.workspace }}/Tests/sources/Game.test
-      # Execute tests defined by the CMake configuration.
-      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ctest -R ${{env.BUILD_TYPE}}
-    
+    - name: configure
+      run: cd Tests && cd build && cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_FLAGS="-Werror" ..
+    - name: make
+      run: cd Lib && make
+    - name: Run Test
+      run: ./test_bomberman
+
