--- a/.github/workflows/g-test.yml
+++ b/.github/workflows/g-test.yml
@@ -22,7 +22,7 @@ jobs:
       run: cmake --build ${{ github.workspace }}/Tests/build ##--config ${{env.BUILD_TYPE}}
 
     - name: configure
-      run: git -f clean && cd Tests && mkdir build && cd build && cmake .. && cmake --build . && cp test_bomberman .. && ./test_bomberman
+      run: rm -r Tests/build  && cd Tests && mkdir build && cd build && cmake .. && cmake --build . && cp test_bomberman .. && ./test_bomberman
 
     - name: Run Test
       run: cd build && cmake .. && cmake --build . && cp test_bomberman .. && ./test_bomberman
