--- a/.github/workflows/g-test.yml
+++ b/.github/workflows/g-test.yml
@@ -16,11 +16,11 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: configure
-      run: sudo apt-get install libgtest-dev && sudo apt-get install xorg-dev libglu1-mesa-dev && sudo apt-get install libirrlicht1.8 libirrlicht-dev libirrlicht-doc && cmake -E env SKIP_RESOURCES_FETCHING="TRUE" cmake -B ${{ github.workspace}}/Tests/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+      run: sudo apt-get install libglfw3-dev && sudo apt-get install libgtest-dev && sudo apt-get install xorg-dev libglu1-mesa-dev && sudo apt-get install libirrlicht1.8 libirrlicht-dev libirrlicht-doc && cmake -E env SKIP_RESOURCES_FETCHING="TRUE" cmake -B ${{ github.workspace}}/Tests/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
     - name: make
       run: cmake --build ${{ github.workspace }}/Tests/build ##--config ${{env.BUILD_TYPE}}
 
     - name: configure & Run Test
-      run: rm -r Tests/build  && cd Tests && mkdir build && cd build && cmake .. && cmake --build . && cp test_bomberman .. && export DISPLAY=:0  && ./test_bomberman
+      run: rm -r Tests/build  && cd Tests && mkdir build && cd build && cmake .. && cmake --build . && cp test_bomberman .. && ./test_bomberman
 
