We did adjustment to the CMakeLists of the Module Tests : We skip Windows tests in CI/CD

--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -18,11 +18,18 @@ FILE(COPY ${PROJET_DIRECTORY}/Engine DESTINATION ${CMAKE_CURRENT_SOURCE_DIR})
 
 ADD_SUBDIRECTORY(Lib/XRaylib)
 
+# We add this to ensure the CI/CDs don't fetch resources
+IF (NOT DEFINED ENV{SKIP_RESOURCES_FETCHING})
+    MESSAGE("-- Compile all tests")
+ELSE()
+    LIST(REMOVE_ITEM SRCS "sources/Raylib/RaylibWindowTests.cpp")
+    MESSAGE("-- Skipping windows tests for CI/CD...")
+ENDIF()
+
 # Generate a list of files
 FILE(GLOB_RECURSE SRCS CONFIGURE_DEPENDS
     "${PROJET_DIRECTORY}Engine/Core/*.cpp"
     "${PROJET_DIRECTORY}Game/*.cpp"
-    "sources/Raylib/*.cpp"
     "sources/XRay/*.cpp"
     #"sources/Game/GamePlayer*.cpp" Need to edit tests
 )
